--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,9 +1,17 @@
 <h1>LOGIN</h1>
 
-<form action="/api/users/login" method="post">
+<form action="/api/sessions/login" method="post">
   Email:
   <input type="email" name="email" id="ema" />
   password:
   <input type="password" name="password" id="password" />
   <input type="submit" value="LOGIN" />
 </form>
+
+<button onclick="location.href='/api/sessions/auth/github'">GITHUB</button>
+<button onclick="location.href='/api/sessions/auth/google'">GOOGLE</button>
+<p></p>
+<div>
+  No user?
+  <button onclick="location.href='/api/signup'">SIGN UP</button>
+</div>
