3era entrega del proyecto final v1

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -3,6 +3,8 @@
 <h5 id="cart">cart: {{cart}}</h5>
 <h5>Role: {{role}}</h5>
 <button onclick="location.href='/api/sessions/logout'">Logout</button>
+<p></p>
+<button onclick="location.href='/api/purchase'">CART</button>
 {{#each results}}
   <p>Title: {{title}} </p>
   <p>Description: {{description}} </p>
