--- a/src/views/signup.handlebars
+++ b/src/views/signup.handlebars
@@ -22,3 +22,5 @@
   already user?
   <button onclick="location.href='/api/signup'">LOG IN</button>
 </div>
+
+{{! <script type="module" src="/js/signup.js"></script> }}
