--- a/src/views/createProducts.handlebars
+++ b/src/views/createProducts.handlebars
@@ -1,4 +1,4 @@
-<h2>Create a product</h2>
+<h3>Create a product</32>
 <div id="errorCreate"></div>
 <form id="createProduct">
   <input type="text" name="title" id="title" placeholder="title" />
@@ -17,7 +17,7 @@
   <input type="submit" value="CREATE" />
 </form>
 
-<h2>Update a product</h2>
+<h3>Update a product</h3>
 <div id="errorUpdate"></div>
 <form id="updateProduct">
   <input type="text" name="updateId" id="updateId" placeholder="id" />
@@ -42,12 +42,14 @@
   <input type="submit" value="UPDATE" />
 </form>
 
-<h2>Delete a product</h2>
+<h3>Delete a product</h3>
 <div id="errorDelete"></div>
 <form id="deleteProduct">
   <input type="text" name="deleteId" id="deleteId" placeholder="id" />
   <input type="submit" value="DELETE" />
 </form>
+
+<button onclick="location.href='/api/backOfficeHome'">BACK TO BACK OFFICE</button>
 
 <div id="productList"></div>
 
