--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -2,7 +2,7 @@
 
 <form action="/api/sessions/login" method="post">
   Email:
-  <input type="email" name="email" id="ema" />
+  <input type="email" name="email" id="email" />
   password:
   <input type="password" name="password" id="password" />
   <input type="submit" value="LOGIN" />
