--- a/src/views/backOfficeHome.handlebars
+++ b/src/views/backOfficeHome.handlebars
@@ -1,7 +1,7 @@
 <h3>ADMIN'S BACK OFFICE</h3>
 
-<button onclick="location.href='/api/manageProducts'">Manage products</button>
-<button onclick="location.href='/api/generateAdmins'">Generate Admins</button>
+<button onclick="location.href='/api/manageProducts'">Products manager</button>
+<button onclick="location.href='/api/generateAdmins'">Role manager</button>
 <button onclick="location.href='/api/libraryOrders'">Orders</button>
 <p></p>
 <p></p>
