--- a/src/views/createProducts.handlebars
+++ b/src/views/createProducts.handlebars
@@ -14,6 +14,10 @@
   <input type="number" name="stock" id="stock" placeholder="stock" />
   <input type="text" name="category" id="category" placeholder="category" />
   <input type="text" name="thumbnail" id="thumbnail" placeholder="thumbnail" />
+  <select id="owner">
+    <option value="true">i am owner</option>
+    <option value="false">withouth owner</option>
+  </select>
   <input type="submit" value="CREATE" />
 </form>
 
