--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -7,7 +7,10 @@
   <input type="password" name="password" id="password" />
   <input type="submit" value="LOGIN" />
 </form>
-
+<div>
+  <button onclick="location.href='/api/checkEmail'">Not remember the password?</button>
+</div>
+<p></p>
 <button onclick="location.href='/api/sessions/auth/github'">GITHUB</button>
 <button onclick="location.href='/api/sessions/auth/google'">GOOGLE</button>
 <p></p>
