--- a/src/views/succesCreatedProduct.handlebars
+++ b/src/views/succesCreatedProduct.handlebars
@@ -2,4 +2,4 @@
 
 <p>get back to the product manager view</p>
 
-<button onclick="location.href='/api/createProducts'">GO BACK</button>
+<button onclick="location.href='/api/backOfficeHome'">GO BACK</button>
