--- a/src/views/generateAdmins.handlebars
+++ b/src/views/generateAdmins.handlebars
@@ -17,6 +17,7 @@
   <select id="role">
     <option value="admin">admin</option>
     <option value="user">user</option>
+    <option value="premium">premium</option>
   </select>
   <input type="submit" value="CONVERT" />
 </form>
