entrega clase 21 documentacion v1

--- a/src/views/checkStock.handlebars
+++ b/src/views/checkStock.handlebars
@@ -17,7 +17,7 @@
   <p>------------------</p>
 {{/each}}
 
-<p>Total: ${{total}}</p>
+<p>Total: ${{totalFormat}}</p>
 
 <button onclick="location.href='/api/checkOut'">CONFIRM</button>
 <p></p>
