practica de integracion clase 23 v1

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -7,6 +7,8 @@
   <button onclick="location.href='/api/backOfficeHome'">BACK OFFICE</button>
   <p></p>
 {{/if}}
+<button onclick="location.href='/api/file'">UPLOAD IMAGES AND DOCUMENTS</button>
+<p></p>
 {{#if isPremium}}
   <button onclick="location.href='/api/backOfficeHome'">BACK OFFICE</button>
   <p></p>
