--- a/src/views/signup.handlebars
+++ b/src/views/signup.handlebars
@@ -20,7 +20,7 @@
 <p></p>
 <div>
   already user?
-  <button onclick="location.href='/api/signup'">LOG IN</button>
+  <button onclick="location.href='/api/login'">LOG IN</button>
 </div>
 
 {{! <script type="module" src="/js/signup.js"></script> }}
